--- a/tests.yml
+++ b/tests.yml
@@ -1,4 +1,4 @@
 repo_owner: IO9000
-kittygram_domain: https://io9000.hopto.org/
-taski_domain: https://myownkittygram.zapto.org/
+kittygram_domain: https://myownkittygram.zapto.org/
+taski_domain: https://io9000.hopto.org/
 dockerhub_username: yotur 
