--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,6 +1,7 @@
 server {
   listen 80;
   index index.html;
+  server_tokens off;
 
   location /api/ {
     proxy_set_header Host $http_host;
@@ -12,7 +13,8 @@ server {
   }
 
   location / {
-    alias /static/;
+    alias /staticfiles/;
+    index index.html;
     try_files $uri $uri/ /index.html;
   }
 }
