--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,7 +1,6 @@
 server {
   listen 80;
   index index.html;
-  server_tokens off;
 
   location /api/ {
     proxy_set_header Host $http_host;
@@ -13,8 +12,7 @@ server {
   }
 
   location / {
-    alias /staticfiles/;
-    index index.html;
+    alias /static/;
     try_files $uri $uri/ /index.html;
   }
 }
